test: exercise setStdoutStderrTo via forked subprocess
dup2() redirects the whole JVM's stdout/stderr, which breaks surefire's
pipe and caused 'forked VM terminated' when tested in-process. Run the
redirect inside a child JVM instead, then assert the target file from
the parent. Covers both the happy path and the append semantics (existing
file contents are preserved). Closes the 'Manual: MailboxServer output
rotation' item from the PR test plan.